[gd_scene load_steps=82 format=3 uid="uid://bbboj25fy4156"]

[ext_resource type="Script" path="res://Game/Scenes/warrior_m/ctrlr_warrior_m_1.gd" id="1_a7hb2"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_phldr.gd" id="1_tx2c2"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_2.gd" id="2_4hj36"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_1_1.gd" id="2_horsv"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/ctrlr_warrior_m_aa.gd" id="2_lquc7"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_3.gd" id="3_7nk42"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/aa_warrior_m.gd" id="3_a6xtn"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_1_3.gd" id="4_5mao6"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_4.gd" id="4_ndepu"]
[ext_resource type="Texture2D" uid="uid://c886rq88sgimd" path="res://Game/Ressources/Heros/warrior_m/aa.png" id="4_p1c5q"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_1_2.gd" id="4_ty1ey"]
[ext_resource type="Texture2D" uid="uid://ck2fi6wporixw" path="res://Game/Ressources/Heros/warrior_m/spell1_3_warrior.png" id="5_fuh6o"]
[ext_resource type="Texture2D" uid="uid://cayfrx6f0lj7t" path="res://Game/Ressources/Heros/warrior_m/spell1_warrior.png" id="7_1ymdc"]
[ext_resource type="Texture2D" uid="uid://b2pu0c7fa0qaq" path="res://Game/Ressources/Heros/warrior_m/spell2_warrior.png" id="7_k183b"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/ctrlr_warrior_m_2.gd" id="8_81nkh"]
[ext_resource type="Texture2D" uid="uid://bixady6kvsq8s" path="res://Game/Ressources/Heros/warrior_m/spell4_warrior.png" id="8_613rm"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/special_warrior_m.gd" id="9_gixbk"]
[ext_resource type="Texture2D" uid="uid://cu45b54ubnxjv" path="res://Game/Ressources/Heros/warrior_m/spell3_warrior.png" id="10_dgpew"]
[ext_resource type="Texture2D" uid="uid://v22tlestf34r" path="res://Game/Ressources/Heros/warrior_m/spellC_warrior_2.png" id="10_tijcf"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/ctrlr_warrior_m_3.gd" id="11_6flm3"]
[ext_resource type="Texture2D" uid="uid://dandyovht1auk" path="res://Game/Ressources/Heros/warrior_m/spellC_warrior.png" id="11_nnr0h"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_4_hits.gd" id="11_wl6rf"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_4_hit.gd" id="13_3ehgl"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/spells_warrior_m_4_zone.gd" id="14_bg2mk"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/ctrlr_special_warrior_m.gd" id="22_ge3d4"]
[ext_resource type="Script" path="res://Game/Scenes/warrior_m/explode.gd" id="26_pl8r5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hn68g"]
radius = 22.7864

[sub_resource type="AtlasTexture" id="AtlasTexture_s0lo1"]
atlas = ExtResource("4_p1c5q")
region = Rect2(0, 0, 858, 907)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tnjc"]
atlas = ExtResource("4_p1c5q")
region = Rect2(858, 0, 858, 907)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq32k"]
atlas = ExtResource("4_p1c5q")
region = Rect2(1716, 0, 858, 907)

[sub_resource type="AtlasTexture" id="AtlasTexture_g10wg"]
atlas = ExtResource("4_p1c5q")
region = Rect2(2574, 0, 858, 907)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdrps"]
atlas = ExtResource("4_p1c5q")
region = Rect2(3432, 0, 858, 907)

[sub_resource type="SpriteFrames" id="SpriteFrames_43yd4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0lo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tnjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq32k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g10wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdrps")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_liicc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rumdt"]
size = Vector2(665, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_brcu2"]
atlas = ExtResource("7_1ymdc")
region = Rect2(50, 0, 750, 678)

[sub_resource type="AtlasTexture" id="AtlasTexture_eji8a"]
atlas = ExtResource("7_1ymdc")
region = Rect2(800, 0, 750, 678)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3syj"]
atlas = ExtResource("7_1ymdc")
region = Rect2(1550, 0, 750, 678)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy4p6"]
atlas = ExtResource("7_1ymdc")
region = Rect2(2300, 0, 750, 678)

[sub_resource type="SpriteFrames" id="SpriteFrames_leatb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_brcu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eji8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3syj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy4p6")
}],
"loop": false,
"name": &"default",
"speed": 25.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4c77"]
size = Vector2(665, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqg3f"]
atlas = ExtResource("5_fuh6o")
region = Rect2(0, 0, 247, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7p20"]
atlas = ExtResource("5_fuh6o")
region = Rect2(247, 0, 247, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqeie"]
atlas = ExtResource("5_fuh6o")
region = Rect2(494, 0, 247, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_k25ea"]
atlas = ExtResource("5_fuh6o")
region = Rect2(741, 0, 247, 470)

[sub_resource type="SpriteFrames" id="SpriteFrames_pgu18"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqg3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7p20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqeie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k25ea")
}],
"loop": false,
"name": &"spell1_hit",
"speed": 15.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ldody"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w3hkl"]
atlas = ExtResource("7_k183b")
region = Rect2(0, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cluq"]
atlas = ExtResource("7_k183b")
region = Rect2(562, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkdy4"]
atlas = ExtResource("7_k183b")
region = Rect2(1124, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfmoa"]
atlas = ExtResource("7_k183b")
region = Rect2(1686, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7rov"]
atlas = ExtResource("7_k183b")
region = Rect2(2248, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmwie"]
atlas = ExtResource("7_k183b")
region = Rect2(2810, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmqmh"]
atlas = ExtResource("7_k183b")
region = Rect2(3372, 0, 562, 589)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja2wy"]
atlas = ExtResource("7_k183b")
region = Rect2(3934, 0, 562, 589)

[sub_resource type="SpriteFrames" id="SpriteFrames_rg0h6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3hkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cluq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkdy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfmoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7rov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmwie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmqmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja2wy")
}],
"loop": false,
"name": &"spell2",
"speed": 25.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dqoiu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nb7so"]
atlas = ExtResource("10_dgpew")
region = Rect2(0, 0, 753, 697)

[sub_resource type="AtlasTexture" id="AtlasTexture_awlr0"]
atlas = ExtResource("10_dgpew")
region = Rect2(753, 0, 753, 697)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1c6d"]
atlas = ExtResource("10_dgpew")
region = Rect2(1506, 0, 753, 697)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmlcd"]
atlas = ExtResource("10_dgpew")
region = Rect2(2259, 0, 753, 697)

[sub_resource type="SpriteFrames" id="SpriteFrames_bni4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb7so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awlr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1c6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmlcd")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5dyjg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4dp7v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dywj7"]
atlas = ExtResource("5_fuh6o")
region = Rect2(0, 0, 247, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_418dm"]
atlas = ExtResource("5_fuh6o")
region = Rect2(247, 0, 247, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3q2r"]
atlas = ExtResource("5_fuh6o")
region = Rect2(494, 0, 247, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_412kg"]
atlas = ExtResource("5_fuh6o")
region = Rect2(741, 0, 247, 470)

[sub_resource type="SpriteFrames" id="SpriteFrames_pk630"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dywj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_418dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3q2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_412kg")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hnibw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xkcwe"]
atlas = ExtResource("8_613rm")
region = Rect2(0, 0, 1399, 1456)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdkm7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkcwe")
}],
"loop": true,
"name": &"spell_4",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ahnmv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_78tar"]
atlas = ExtResource("10_tijcf")
region = Rect2(0, 0, 909, 909)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofxnk"]
atlas = ExtResource("11_nnr0h")
region = Rect2(0, 0, 838, 836)

[sub_resource type="SpriteFrames" id="SpriteFrames_dt6cl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78tar")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofxnk")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7h5i"]
radius = 448.764

[sub_resource type="AtlasTexture" id="AtlasTexture_3kfdq"]
atlas = ExtResource("11_nnr0h")
region = Rect2(0, 0, 838, 836)

[sub_resource type="SpriteFrames" id="SpriteFrames_5xds2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kfdq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_akj76"]
radius = 416.667

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qq8po"]

[node name="spells_warrior_m_phldr" type="Node"]
script = ExtResource("1_tx2c2")

[node name="ctrlr_warrior_m_aa" type="Node2D" parent="."]
script = ExtResource("2_lquc7")

[node name="aa_warrior_m" type="Area2D" parent="ctrlr_warrior_m_aa"]
visible = false
scale = Vector2(0.14, 0.14)
script = ExtResource("3_a6xtn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_aa/aa_warrior_m"]
shape = SubResource("CircleShape2D_hn68g")

[node name="anim_aa" type="AnimatedSprite2D" parent="ctrlr_warrior_m_aa/aa_warrior_m"]
sprite_frames = SubResource("SpriteFrames_43yd4")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_warrior_m_aa"]
replication_config = SubResource("SceneReplicationConfig_liicc")

[node name="ctrlr_warrior_m_1" type="Node2D" parent="."]
script = ExtResource("1_a7hb2")

[node name="spells_warrior_m_1_1" type="Area2D" parent="ctrlr_warrior_m_1"]
visible = false
scale = Vector2(0.2, 0.2)
script = ExtResource("2_horsv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_1/spells_warrior_m_1_1"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_rumdt")

[node name="Spells_warrior_anim_1_1" type="AnimatedSprite2D" parent="ctrlr_warrior_m_1/spells_warrior_m_1_1"]
sprite_frames = SubResource("SpriteFrames_leatb")

[node name="spells_warrior_m_1_2" type="Area2D" parent="ctrlr_warrior_m_1"]
visible = false
scale = Vector2(0.2, -0.2)
script = ExtResource("4_ty1ey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_1/spells_warrior_m_1_2"]
position = Vector2(0, -25)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_c4c77")

[node name="Spells_warrior_anim_1_2" type="AnimatedSprite2D" parent="ctrlr_warrior_m_1/spells_warrior_m_1_2"]
sprite_frames = SubResource("SpriteFrames_leatb")
frame = 3
frame_progress = 1.0

[node name="spells_warrior_m_1_3" type="Area2D" parent="ctrlr_warrior_m_1"]
visible = false
scale = Vector2(0.25, 0.25)
script = ExtResource("4_5mao6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_1/spells_warrior_m_1_3"]
shape = SubResource("CircleShape2D_hn68g")

[node name="Spells_warrior_anim_1_3" type="AnimatedSprite2D" parent="ctrlr_warrior_m_1/spells_warrior_m_1_3"]
position = Vector2(2, 3)
sprite_frames = SubResource("SpriteFrames_pgu18")
animation = &"spell1_hit"
frame = 3
frame_progress = 1.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_warrior_m_1"]
replication_config = SubResource("SceneReplicationConfig_ldody")

[node name="ctrlr_warrior_m_2" type="Node2D" parent="."]
script = ExtResource("8_81nkh")

[node name="spell_warrior_m_2" type="Area2D" parent="ctrlr_warrior_m_2"]
visible = false
modulate = Color(1, 1, 1, 0.486275)
scale = Vector2(1.5, 1.5)
script = ExtResource("2_4hj36")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_2/spell_warrior_m_2"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_hn68g")

[node name="Spells_warrior_anim_2" type="AnimatedSprite2D" parent="ctrlr_warrior_m_2/spell_warrior_m_2"]
scale = Vector2(0.16, 0.16)
sprite_frames = SubResource("SpriteFrames_rg0h6")
animation = &"spell2"
frame = 7
frame_progress = 1.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_warrior_m_2"]
replication_config = SubResource("SceneReplicationConfig_dqoiu")

[node name="ctrlr_warrior_m_3" type="Node2D" parent="."]
script = ExtResource("11_6flm3")

[node name="spell_warrior_m_3" type="Area2D" parent="ctrlr_warrior_m_3"]
visible = false
scale = Vector2(0.2, 0.2)
script = ExtResource("3_7nk42")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="ctrlr_warrior_m_3/spell_warrior_m_3"]
build_mode = 1
polygon = PackedVector2Array(-1.33333, 0, -187, -293, 16, -230, 116, -122, 152, -1, 122, 141, 9, 265, -165, 324)

[node name="Spells_warrior_anim_3" type="AnimatedSprite2D" parent="ctrlr_warrior_m_3/spell_warrior_m_3"]
sprite_frames = SubResource("SpriteFrames_bni4d")
frame = 3
frame_progress = 1.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_warrior_m_3"]
replication_config = SubResource("SceneReplicationConfig_5dyjg")

[node name="ctrlr_warrior_m_4" type="Node2D" parent="."]
script = ExtResource("4_ndepu")

[node name="dp_hit_warrior_m_4" type="Node2D" parent="ctrlr_warrior_m_4"]
script = ExtResource("11_wl6rf")

[node name="hit_warrior_m_4" type="Area2D" parent="ctrlr_warrior_m_4/dp_hit_warrior_m_4"]
visible = false
scale = Vector2(0.2, 0.25)
script = ExtResource("13_3ehgl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_4/dp_hit_warrior_m_4/hit_warrior_m_4"]
shape = SubResource("CircleShape2D_4dp7v")

[node name="spells_warrior_anim_4_hit" type="AnimatedSprite2D" parent="ctrlr_warrior_m_4/dp_hit_warrior_m_4/hit_warrior_m_4"]
sprite_frames = SubResource("SpriteFrames_pk630")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_warrior_m_4/dp_hit_warrior_m_4"]
replication_config = SubResource("SceneReplicationConfig_hnibw")

[node name="zone_warrior_m_4" type="Area2D" parent="ctrlr_warrior_m_4"]
visible = false
scale = Vector2(1.5, 1.5)
script = ExtResource("14_bg2mk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_warrior_m_4/zone_warrior_m_4"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_hn68g")

[node name="spells_warrior_anim_4_zone" type="AnimatedSprite2D" parent="ctrlr_warrior_m_4/zone_warrior_m_4"]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_fdkm7")
animation = &"spell_4"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_warrior_m_4"]
replication_config = SubResource("SceneReplicationConfig_ahnmv")

[node name="ctrlr_special_warrior_m" type="Node2D" parent="."]
script = ExtResource("22_ge3d4")

[node name="counter" type="Area2D" parent="ctrlr_special_warrior_m"]
visible = false
scale = Vector2(0.06, 0.06)
script = ExtResource("9_gixbk")

[node name="anim_counter" type="AnimatedSprite2D" parent="ctrlr_special_warrior_m/counter"]
sprite_frames = SubResource("SpriteFrames_dt6cl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_special_warrior_m/counter"]
shape = SubResource("CircleShape2D_p7h5i")

[node name="explode" type="Area2D" parent="ctrlr_special_warrior_m"]
visible = false
scale = Vector2(0.06, 0.06)
script = ExtResource("26_pl8r5")

[node name="anim_explode" type="AnimatedSprite2D" parent="ctrlr_special_warrior_m/explode"]
sprite_frames = SubResource("SpriteFrames_5xds2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ctrlr_special_warrior_m/explode"]
shape = SubResource("CircleShape2D_akj76")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ctrlr_special_warrior_m"]
replication_config = SubResource("SceneReplicationConfig_qq8po")
